MD spacing css fix

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -90,6 +90,26 @@ li.preview a {
     width: 443px;
   }
 
+  /* Apply word break only to paragraphs in comment-body */
+  .comment-body p{
+    /* The following styles prevent unbroken strings from breaking the layout */
+    overflow: auto;
+    white-space: -moz-pre-wrap; /* Mozilla */
+    white-space: -hp-pre-wrap; /* HP printers */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: pre-wrap; /* CSS 2.1 */
+    white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
+    word-wrap: break-word; /* IE */
+    -moz-binding: url('xbl.xml#wordwrap'); /* Firefox (using XBL) */
+  }
+
+  /* Indentation for markdown lists */
+
+  .comment-body ul, .comment-body ol, .comment-body li{
+    margin-left: 10px;
+  }
+
   .comment-avatar {
     margin: 0 10px 0 0;
     float: left;
